[gd_scene load_steps=23 format=3 uid="uid://bm83fajcl46xd"]

[ext_resource type="Script" uid="uid://dip3y7fytbd7b" path="res://Character/Player/Player.gd" id="1_p1oc2"]
[ext_resource type="Script" uid="uid://j3j0xv3cyh5r" path="res://Character/Player/sprites.gd" id="2_mfwwi"]
[ext_resource type="Texture2D" uid="uid://cspm8q8vuvtkt" path="res://Character/Player/Weapons/Shotgun/ShotgunV2SpriteSheet.png" id="4_ve82l"]
[ext_resource type="Texture2D" uid="uid://beht2ssm71i86" path="res://Character/Player/Weapons/Pistol/PistolV2SpriteSheet.png" id="5_86gxa"]
[ext_resource type="Texture2D" uid="uid://q8oo7474t3b" path="res://Character/Player/Weapons/Unhanded/UnhandedV2SpriteSheet.png" id="6_5k01n"]
[ext_resource type="PackedScene" uid="uid://kfd5gawo6lq2" path="res://Menus/DeathMenu/DeathMenu.tscn" id="7_5k01n"]
[ext_resource type="PackedScene" uid="uid://b5ciw031pw8wp" path="res://Menus/PauseMenu/PauseMenu.tscn" id="7_86gxa"]
[ext_resource type="Texture2D" uid="uid://nyjcd1aprfcn" path="res://Character/Player/Face/FaceV2.png" id="11_lt1j7"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_o1fmn"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4otma"]

[sub_resource type="AtlasTexture" id="AtlasTexture_86gxa"]
atlas = ExtResource("5_86gxa")
region = Rect2(20, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_5k01n"]
atlas = ExtResource("5_86gxa")
region = Rect2(40, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_ry8fs"]
atlas = ExtResource("5_86gxa")
region = Rect2(0, 0, 20, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_jcxr1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_86gxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5k01n")
}],
"loop": false,
"name": &"Attack",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ry8fs")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_p1oc2"]
atlas = ExtResource("4_ve82l")
region = Rect2(20, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfwwi"]
atlas = ExtResource("4_ve82l")
region = Rect2(40, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_cs2k0"]
atlas = ExtResource("4_ve82l")
region = Rect2(0, 0, 20, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_wnsg8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1oc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfwwi")
}],
"loop": true,
"name": &"Attack",
"speed": 1.3
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs2k0")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_l4pw4"]
atlas = ExtResource("6_5k01n")
region = Rect2(30, 0, 30, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubev3"]
atlas = ExtResource("6_5k01n")
region = Rect2(0, 0, 30, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_1d166"]
atlas = ExtResource("6_5k01n")
region = Rect2(0, 0, 30, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_p46qh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4pw4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubev3")
}],
"loop": true,
"name": &"Attack",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1d166")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_p1oc2")

[node name="PlayerMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_o1fmn")

[node name="PlayerCollision" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_4otma")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="PlayerCam" type="Camera3D" parent="Head"]

[node name="Face" type="Node2D" parent="Head/PlayerCam"]
script = ExtResource("2_mfwwi")

[node name="Face" type="Sprite2D" parent="Head/PlayerCam/Face"]
texture_filter = 1
scale = Vector2(4, 4)
texture = ExtResource("11_lt1j7")
centered = false
hframes = 6
vframes = 11

[node name="MiddleWeapon" type="Control" parent="Head/PlayerCam"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(10, 10)

[node name="Pistol" type="AnimatedSprite2D" parent="Head/PlayerCam/MiddleWeapon"]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_jcxr1")
animation = &"Idle"
centered = false
offset = Vector2(-10, -20)

[node name="Shotgun" type="AnimatedSprite2D" parent="Head/PlayerCam/MiddleWeapon"]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_wnsg8")
animation = &"Idle"
centered = false
offset = Vector2(-10, -20)

[node name="RightWeapon" type="Control" parent="Head/PlayerCam"]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0

[node name="Unhanded" type="AnimatedSprite2D" parent="Head/PlayerCam/RightWeapon"]
texture_filter = 1
scale = Vector2(10, 10)
sprite_frames = SubResource("SpriteFrames_p46qh")
animation = &"Idle"
centered = false
offset = Vector2(-30, -50)

[node name="WeaponRays" type="Node3D" parent="Head/PlayerCam"]

[node name="Raycast1" type="RayCast3D" parent="Head/PlayerCam/WeaponRays"]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 1, 0, 0, 0)
target_position = Vector3(0, 0, -8)
debug_shape_custom_color = Color(0.892429, 0.898986, 0.0466745, 1)

[node name="Raycast2" type="RayCast3D" parent="Head/PlayerCam/WeaponRays"]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 1, 0, 0, 0)
target_position = Vector3(-0.2, 0, -8)

[node name="Raycast3" type="RayCast3D" parent="Head/PlayerCam/WeaponRays"]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 1, 0, 0, 0)
target_position = Vector3(0.2, 0, -8)

[node name="DeathMenu" parent="Head/PlayerCam" instance=ExtResource("7_5k01n")]
visible = false

[node name="PauseMenu" parent="Head/PlayerCam" instance=ExtResource("7_86gxa")]

[node name="FaceTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Cooldown" type="Timer" parent="."]

[connection signal="timeout" from="FaceTimer" to="Head/PlayerCam/Face" method="_on_timer_timeout"]
[connection signal="timeout" from="Cooldown" to="." method="_WeaponCooldownDone"]
